.provarCaches/00D5f000005vwGkEAI/objects/rstkf__allpmttyperegcalc__c.object
<CustomObject>
    <description>allpmttyperegcalc__c</description>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_amthomecurr__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_amthomecurrstyle__c</fullName>
        <label>Style Amount Home Curr</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_amtitemcurr__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_amtitemcurrstyle__c</fullName>
        <label>Style Amount Item Curr</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_apapplicexchrate__c</fullName>
        <label>Exch Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_apapplicexchratestyle__c</fullName>
        <label>Style Exch Rate Apapplic</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_apitemid__c</fullName>
        <label>AP Item Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_appaydexchrate__c</fullName>
        <label>Exch Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_appaydexhratestyle__c</fullName>
        <label>Style Exch Rate Appayd</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_bankacct__c</fullName>
        <label>Bank Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_bankacctendrange__c</fullName>
        <label>Bank Account End Range</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_bankacctstartrange__c</fullName>
        <label>Bank Account Start Range</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_batch__c</fullName>
        <label>Batch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_checknum__c</fullName>
        <label>Check #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_contacctendrange__c</fullName>
        <label>Control Account End Range</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_contacctstartrange__c</fullName>
        <label>Control Account Start Range</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_controlacct__c</fullName>
        <label>Control Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_enddate__c</fullName>
        <label>Payment End Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>All Payment Type Register Calculations</relationshipLabel>
        <relationshipName>glcmps01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_glusr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial System User</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>All Payment Type Register Calculations</relationshipLabel>
        <relationshipName>glusrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_handcheckind__c</fullName>
        <label>Hnd Chk</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_homecurr__c</fullName>
        <label>Home Curr</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_homedisc__c</fullName>
        <label>Home Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_homepaid__c</fullName>
        <label>Home Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_invnum__c</fullName>
        <label>Invoice or DR Memo #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_itemcurr__c</fullName>
        <label>Item Curr</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_maintdisc__c</fullName>
        <label>Maint Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_maintpaid__c</fullName>
        <label>Maint Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_payamthomecurr__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_payamthomecurrstyle__c</fullName>
        <label>Style Payment Amt Home Curr</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_payamtpaycurr__c</fullName>
        <label>Payment Amount Pay Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_payamtpaycurrstyle__c</fullName>
        <label>Style Payment Amt Pay Curr</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_paycurr__c</fullName>
        <label>Pay Curr</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_paydate__c</fullName>
        <label>Pay Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_paymenttypes__c</fullName>
        <label>Payment Types</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_paytype__c</fullName>
        <label>Pay Tp</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_period__c</fullName>
        <label>Per</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_pmtdisc__c</fullName>
        <label>Payment (Discount)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_quickpmtind__c</fullName>
        <label>Qck Pmt</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_startdate__c</fullName>
        <label>Payment Start Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_totalsrow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Totals Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_totalstype__c</fullName>
        <label>Totals Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Control Account Total</fullName>
                </value>
                <value>
                    <fullName>Bank Account Total</fullName>
                </value>
                <value>
                    <fullName>Year Period Total</fullName>
                </value>
                <value>
                    <fullName>Report Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_txnid__c</fullName>
        <label>Transaction Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_txntype__c</fullName>
        <label>Tp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_vendnumendrange__c</fullName>
        <label>Vendor Number End Range</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_vendnumstartrange__c</fullName>
        <label>Vendor Number start Range</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_vendorname__c</fullName>
        <label>Vendor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_vendornum__c</fullName>
        <label>Vendor #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__allpmttyperegcalc_year__c</fullName>
        <label>Year</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>All Payment Type Register Calculation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>All Payment Type Register Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>